instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:10: error: i is already defined as variable i
var i : int=0
    ^InstructionsDrawG:15: error: i is already defined as variable i
var i : int=0
    ^InstructionsDrawG:20: error: i is already defined as variable i
var i : int=0
    ^InstructionsDrawG:3: error: not found: type blue
setCouleurBrosse(c:blue)
                   ^InstructionsDrawG:3: error: not found: value c
setCouleurBrosse(c:blue)
                 ^InstructionsDrawG:5: error: not found: type int
var i : int=0
        ^InstructionsDrawG:10: error: not found: type int
var i : int=0
        ^InstructionsDrawG:15: error: not found: type int
var i : int=0
        ^InstructionsDrawG:20: error: not found: type int
var i : int=0
        ^