instructions.InstructionsDrawG.scala.code

gauche()
setCouleurBrosse(c:blue)
baisseBrosse()
var i : int=0
for(i <- 0 to 4)
	avance()

gauche()
var i : int=0
for(i <- 0 to 4)
	avance()

gauche()
var i : int=0
for(i <- 0 to 4)
	avance()

gauche()
var i : int=0
for(i <- 0 to 2)
	avance()

gauche()
avance()
leveBrosse()

droite()
avance()
avance()
droite()
avance()